Edited some message

--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
             <br>
             <p>To the most important person ever...</p>
             <p>Don't let anyone else's negative thoughts dim your light (Including me). Keep being the sunshine in my life and in the lives of everyone around you. 🌞</p>
-            <p>I will always be here to support you, no matter what</p>
+            <p>I will stand in your rain and support you through every storm till the rainbow arrives.</p>
             <br>
-            <p style="color: var(--accent-red); font-weight: bold; font-size: 1.2rem;">So please, raise your head up! Don't be down</p>
+            <p style="color: var(--accent-red); font-weight: bold; font-size: 1.2rem;">So please, raise your head up!</p>
         </div>
     </section>
 
