--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 </head>
 <body>
 
-    <section id="page1" class="active">
+    <section id="page1">
         <div class="clay-card">
             <h2>🧧 Pilih Angpao</h2>
             <p>Mau pilih yang mana dulu nih?</p>
@@ -263,8 +263,33 @@
         </div>
     </section>
 
+    <section id="page5" class="active">
+        <div class="clay-card">
+            <h2>📸 Memories 📸</h2>
+            <p>Here are some pics of our playtogether...</p>
+            <br>
+            <p style="text-align: bottom; color: #555; font-size: 0.9rem; margin-bottom: 15px;">The first time we met</p>
+            <img src="assets/Pic1.png" alt="Photo 1" style="width: 100%; border-radius: 15px; margin-bottom: 10px; box-shadow: var(--shadow-light);">
+            <p style="text-align: bottom; color: #555; font-size: 0.9rem; margin-bottom: 15px;">Kamu kenal sama mereka kah?</p>
+            <img src="assets/Pic2.png" alt="Photo 2" style="width: 100%; border-radius: 15px; margin-bottom: 10px; box-shadow: var(--shadow-light);">
+            <p style="text-align: bottom; color: #555; font-size: 0.9rem; margin-bottom: 15px;">Baru nyadar ada jee juga</p>
+            <img src="assets/Pic3.png" alt="Photo 3" style="width: 100%; border-radius: 15px; margin-bottom: 10px ;box-shadow: var(--shadow-light);">
+            <p style="text-align: bottom; color: #555; font-size: 0.9rem; margin-bottom: 15px;">Waktu masih sering ke maps relapse</p>
+            <img src="assets/Pic4.png" alt="Photo 4" style="width: 100%; border-radius: 15px; margin-bottom: 10px; box-shadow: var(--shadow-light);">
+            <img src="assets/Pic6.png" alt="Photo 5" style="width: 100%; border-radius: 15px; margin-bottom: 10px; box-shadow: var(--shadow-light);">
+            <img src="assets/Pic7.png" alt="Photo 6" style="width: 100%; border-radius: 15px; margin-bottom: 10px; box-shadow: var(--shadow-light);">
+            <p style="text-align: bottom; color: #555; font-size: 0.9rem; margin-bottom: 15px;">Some more mounts</p>
+            <img src="assets/Pic5.png" alt="Photo 5" style="width: 100%; border-radius: 15px; margin-bottom: 10px; box-shadow: var(--shadow-light);">
+            <img src="assets/Pic8.png" alt="Photo 7" style="width: 100%; border-radius: 15px; margin-bottom: 10px; box-shadow: var(--shadow-light);">
+            <p style="text-align: bottom; color: #555; font-size: 0.9rem; margin-bottom: 15px;">Terakhir</p>
+            <img src="assets/Pic9.png" alt="Photo 8" style="width: 100%; border-radius: 15px; margin-bottom: 10px; box-shadow: var(--shadow-light);">
+            <img src="assets/Pic10.png" alt="Photo 9" style="width: 100%; border-radius: 15px; margin-bottom: 10px; box-shadow: var(--shadow-light);">
+        </div>
+    </section>
+
     <div class="nav-bar">
         <button class="nav-btn active" onclick="showPage(1, this)">Back 🧧</button>
+        <button class="nav-btn" onclick="showPage(5, this)">Photos 📸</button>
     </div>
 
     <script>
