--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
     <section id="page5">
         <div class="clay-card">
             <h2>📸 Memories 📸</h2>
-            <p>Here are some pics of our playtogether...</p>
+            <p>Here are some pics that I saved</p>
             <br>
             <p style="text-align: bottom; color: #555; font-size: 0.9rem; margin-bottom: 15px;">The first time we met</p>
             <img src="assets/Pic1.png" alt="Photo 1" style="width: 100%; border-radius: 15px; margin-bottom: 10px; box-shadow: var(--shadow-light);">
